Closed Bug 230704 Opened 22 years ago Closed 22 years ago

[FIX]CSS parser allows comments in the middle of some function tokens

Categories

(Core :: CSS Parsing and Computation, defect, P1)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.7alpha

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

See last test at http://www.richinstyle.com/test/keyconcepts/comments2.html Basically, we treat the selector ":lang/* */(fr)" as identical to ":lang(fr)". That's wrong.
Priority: -- → P1
Summary: CSS parser allows comments in the middle of some function tokens → [FIX]CSS parser allows comments in the middle of some function tokens
Target Milestone: --- → mozilla1.7alpha
Attached patch PatchSplinter Review
Attachment #138880 - Flags: superreview?(dbaron)
Attachment #138880 - Flags: review?(dbaron)
Comment on attachment 138880 [details] [diff] [review] Patch r+sr=dbaron if you put a rather verbose comment above the definition of |isTree| explaining how that interacts with what you just added to allow the tree pseudo-elements to be optionally functional.
Attachment #138880 - Flags: superreview?(dbaron)
Attachment #138880 - Flags: superreview+
Attachment #138880 - Flags: review?(dbaron)
Attachment #138880 - Flags: review+
Added: // If a tree pseudo-element is using the function syntax, it will // get isTree set here and will pass the check below that only // allows functions if they are in our list of things allowed to be // functions. If it is _not_ using the function syntax, isTree will // be false, and it will still pass that check. So the tree // pseudo-elements are allowed to be either functions or not, as // desired. and checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: