Don't allow pseudos that are supposed to be functions to pass through as ident tokens.  Bug 230704, r+sr=dbaron